# indices_projetados

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
bcb/: focus.py
bcb_/: focus.py  metas.py
indices/: indice.py  simulacao_juros.py
simulador_indices/: __init__.py  simulacao_juros.py
tests/: __init__.py  conftest.py  test_focus.py  test_ipea_data.py  test_simulador.py
