[tool.poetry]
name = "simulador-indices"
version = "0.2.0"
description = "Simulador para gerar Previsoes de Indices Economicos Futuros"
authors = ["JPVR"]
readme = "README.md"
packages = [{include = "simulador_indices"}, {include = "bcb_"}]
license = "MIT"
include = ["ANBIMA.cal"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.3"
requests = "^2.28.2"
python-bcb = "^0.1.8"
bizdays = "^1.0.8"

[tool.poetry.group.dev.dependencies]
pytest = "7.2.1"
pytest-mock = "^3.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
